--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
   <header class="card">
-    <h1>예비 소프트웨어개발과 ○○○</h1>
+    <h1>예비 소프트웨어개발과 박주영</h1>
     <p class="sub">겨울방학 포트폴리오 과제</p>
   </header>
 
   <main class="wrap">
     <section class="card">
       <h2>1) 소개</h2>
-      <p>저는 ○○○입니다.</p>
+      <p>저는 박주영 입니다.</p>
       <p>이번 방학에는 Git/GitHub, HTML/CSS을 맛보기로 배웁니다.</p>
-      <p>목표는 작은 성공을 여러 번 경험하는 것입니다.</p>
+      <p>목표는 자격증 많이 따는것 입니다.</p>
     </section>
 
     <section class="card">
       <h2>2) 좋아하는 것(목록)</h2> 
       <ul>
-        <li>예: 게임</li>
-        <li>예: 운동</li>
-        <li>예: 음악</li>
+        <li> 자는것 </li>
+        <li> 운동</li>
+        <li> 음악</li>
       </ul>
     </section>
 
@@ -33,9 +33,9 @@
       <h2>3) 방학 계획(표)</h2>
       <table>
         <tr><th>요일</th><th>할 일</th></tr>
-        <tr><td>월</td><td>HTML 연습</td></tr>
-        <tr><td>화</td><td>CSS 꾸미기</td></tr>
-        <tr><td>수</td><td>내용 편집!</td></tr>
+        <tr><td>월</td><td> 방학 숙제하기</td></tr>
+        <tr><td>화</td><td> 과목 공부하기</td></tr>
+        <tr><td>수</td><td> 운동하기!</td></tr>
       </table>
     </section>
 
@@ -60,3 +60,4 @@
   </footer>
 </body>
 </html>
+
