--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="card">
       <h2>5) 이미지</h2>
       <p>ui/images 폴더에 이미지 넣고 아래 파일명을 맞추세요.</p>
-      <img src="images/sample.jpg" alt="샘플 이미지" />
+      <img src="sample.png" alt="샘플 이미지" />
     </section>
   </main>
 
@@ -60,4 +60,5 @@
   </footer>
 </body>
 </html>
+
 
